--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <label for="menu">
                 <span class="cabecalho__menu-hamburguer container__imagem"><span>
             </label>
+
             <ul class="lista-menu">
                 <li class="lista-menu__titulo"><a href="#">Categorias</a></li>
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
@@ -24,13 +25,34 @@
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Infraestrutura</a></li>
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design e Cores</a></li>
-
-
             </ul>
+
             <img src="./assets/Logo.svg" alt="Logo Alura Books" class="container__imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+
         <div class="container">
-            <a href="#"><img src="./assets/Vector.svg" alt="Meus favoritos" class="container__imagem"></a>
+                <ul class="opcoes">
+                    <input type="checkbox" id="opcoes__menu" class="opcoes__botao">
+                    <label for="opcoes__menu">
+                        <li class="opcoes__item">Categorias</li>
+                    </label>
+                    <ul class="lista-menu">
+                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
+                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Front-End</a></li>
+                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Infraestrutura</a></li>
+                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
+                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design e Cores</a></li>
+                    </ul>
+                    <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+                    <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+                </ul>
+            </div>
+
+
+        <div class="container">
+            <a href="#"><img src="./assets/Vector.svg" alt="Meus favoritos"
+                    class="container__imagem container__imagem-transparente"></a>
             <a href="#"><img src="./assets/Sacola.svg" alt="Meu carrinho de compras" class="container__imagem"></a>
             <a href="#"><img src="./assets/Vector (1).svg" alt="Meu perfil" class="container__imagem"></a>
         </div>
@@ -158,7 +180,7 @@
             </div>
 
         </div>
-        
+
         <section class="topicos">
             <h2 class="topicos__titulo"> Tópicos visitados recentemente</h2>
             <ul class="topicos__lista">
@@ -175,15 +197,17 @@
         </section>
 
         <section class="contato">
+            <div class="contato__descricao">
             <h2 class="contato__titulo">Fique por dentro das novidades! </h2>
             <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+            </div>
             <input type="email" name="email" id="email" placeholder="Cadastre seu e-mail" class="contato__input">
         </section>
 
         <hr>
 
     </main>
-    
+
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
     </footer>
