--- a/index.html
+++ b/index.html
@@ -32,29 +32,37 @@
         </div>
 
         <div class="container">
-                <ul class="opcoes">
-                    <input type="checkbox" id="opcoes__menu" class="opcoes__botao">
-                    <label for="opcoes__menu">
-                        <li class="opcoes__item">Categorias</li>
-                    </label>
-                    <ul class="lista-menu">
-                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
-                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Front-End</a></li>
-                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Infraestrutura</a></li>
-                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
-                        <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design e Cores</a></li>
-                    </ul>
-                    <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
-                    <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+            <ul class="opcoes">
+                <input type="checkbox" id="opcoes__menu" class="opcoes__botao">
+                <label for="opcoes__menu">
+                    <li class="opcoes__item">Categorias</li>
+                </label>
+                <ul class="lista-menu">
+                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
+                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Front-End</a></li>
+                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Infraestrutura</a></li>
+                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
+                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design e Cores</a></li>
                 </ul>
-            </div>
+                <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+                <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+            </ul>
+        </div>
 
 
         <div class="container">
-            <a href="#"><img src="./assets/Vector.svg" alt="Meus favoritos"
-                    class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="./assets/Sacola.svg" alt="Meu carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="./assets/Vector (1).svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#">
+                <img src="./assets/Vector.svg" alt="Meus favoritos"
+                    class="container__imagem container__imagem-transparente">
+            </a>
+            <a href="#" class="container__link">
+                <img src="./assets/Sacola.svg" alt="Meu carrinho de compras" class="container__imagem">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="./assets/Vector (1).svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
 
 
@@ -198,8 +206,8 @@
 
         <section class="contato">
             <div class="contato__descricao">
-            <h2 class="contato__titulo">Fique por dentro das novidades! </h2>
-            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+                <h2 class="contato__titulo">Fique por dentro das novidades! </h2>
+                <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
             </div>
             <input type="email" name="email" id="email" placeholder="Cadastre seu e-mail" class="contato__input">
         </section>
@@ -210,6 +218,82 @@
 
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Educação</li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/CasaDoCodigo.svg" alt="Logo Casa do Código">
+                <a href="#" class="lista-rodape__link">Casa do código</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/Caelum.svg" alt="Logo Caelum">
+                <a href="#" class="lista-rodape__link">Caelum</a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Produtividade</li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/Alura.svg" alt="Logo Alura">
+                <a href="#" class="lista-rodape__link">Alura</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/AluraEmpresas.svg" alt="Logo Alura Para Empresas">
+                <a href="#" class="lista-rodape__link">Alura Para Empresas</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/AluraLatam.svg" alt="Logo Alura LATAM">
+                <a href="#" class="lista-rodape__link">Alura LATAM</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/AluraStart.svg" alt="Logo Alura Start">
+                <a href="#" class="lista-rodape__link">Alura Start</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/MusicDot.svg" alt="Logo MusicDot">
+                <a href="#" class="lista-rodape__link">MusicDot</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/AluraLingua.svg" alt="Logo Alura Língua">
+                <a href="#" class="lista-rodape__link">Alura Língua</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/PM3.svg" alt="Logo PM3">
+                <a href="#" class="lista-rodape__link">PM3</a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape__titulo">Comunidade</li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/HipstersTech.svg" alt="Logo Hipsters Tech">
+                <a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/Scuba.svg" alt="Logo Scuba Dev">
+                <a href="#" class="lista-rodape__link">Scuba Dev</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/Layers.svg" alt="Logo Layers Tech">
+                <a href="#" class="lista-rodape__link">Layers ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/LikeABoss.svg" alt="Logo Like a Boss">
+                <a href="#" class="lista-rodape__link">Like a Boss</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/CarreiraSemFronteira.svg" alt="Logo Carreira Sem Fronteira">
+                <a href="#" class="lista-rodape__link">Carreira sem Fronteira</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/HipstersJobs.svg" alt="Logo Hipsters Jobs">
+                <a href="#" class="lista-rodape__link">Hipsters ponto Jobs</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="assets/imagensFooter/GUJ.svg" alt="Logo GUJ">
+                <a href="#" class="lista-rodape__link">GUJ</a>
+            </li>
+        </ul>
+
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
