Refatorar estrutura de HTML e CSS para melhorar a semântica e a responsividade

--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
             <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
 
-        <div class="container">
-            <ul class="opcoes">
-                <input type="checkbox" id="opcoes__menu" class="opcoes__botao">
-                <label for="opcoes__menu">
-                    <li class="opcoes__item">Categorias</li>
-                </label>
-                <ul class="lista-menu">
-                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
-                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Front-End</a></li>
-                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Infraestrutura</a></li>
-                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
-                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design e Cores</a></li>
-                </ul>
-                <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
-                <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes__menu" class="opcoes__botao">
+            <label for="opcoes__menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Programação</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Front-End</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Infraestrutura</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
+                <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design e Cores</a></li>
             </ul>
-        </div>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+        </ul>
+
 
 
         <div class="container">
@@ -152,34 +152,24 @@
 
         </section>
 
-        <div class="card2">
-            <div class="card2__conteudo">
-                <div class="card2__descricao2">
-                    <div class="descricao2">
-                        <div class="estrelas">
+        <div class="card">
+            <div class="card__descricao">
+                <div class="descricao">
+                    <div class="estrelas">
                             <img src="assets/star.svg" alt="">
                             <img src="assets/star.svg" alt="">
                             <img src="assets/star.svg" alt="">
                             <img src="assets/star.svg" alt="">
                             <img src="assets/star.svg" alt="">
-                        </div>
-
-                        <div class="descricao2__texto">
-                            <h3 class="descricao2__titulo">Autora do mes</h3>
-                            <h2 class="descricao2__autor">Juliana Agarikov</h2>
-                            <p>Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
-                        </div>
-
-
                     </div>
+                    <h3 class="descricao__titulo">Autora do mes</h3>
+                    <h2 class="descricao__titulo__livro">Juliana Agarikov</h2>
+                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                </div>
+               <img src="assets/Perfil-escritora 1.svg" alt="Escritora">
                 </div>
 
-                <div class="card2__figuras">
-                    <img src="assets/Perfil-escritora 1.svg" alt="Escritora">
-                </div>
-            </div>
-
-            <div class="card2__botoes">
+                <div class=" card__botoes">
                 <ul class="botoes">
                     <li class="botoes__item" id="favorito__angular"><img src="assets/Vector.svg" alt=""></li>
                     <li class="botoes__item"><img src="assets/Sacola.svg" alt=""></li>
