--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu-hamburguer container__imagem"><span>
             </label>
 
@@ -34,7 +34,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes__menu" class="opcoes__botao">
-            <label for="opcoes__menu">
+            <label for="opcoes__menu" class="opcoes_-rotulo">
                 <li class="opcoes__item">Categorias</li>
             </label>
             <ul class="lista-menu">
@@ -77,108 +77,120 @@
 
         <section class="carrossel">
             <h2 class="carrossel__titulo"> Novos lançamentos</h2>
-            <div class="swiper">
-                <div class="swiper-pagination"></div>
 
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
-                            alt="Livro sobre apache kafka e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Liderança.svg"
-                            alt="Livro sobre liderança da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Javascript.svg"
-                            alt="Livro sobre javascript da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Portugol.svg" alt="Livro sobre portugol da alura books">
+            <div class="carrossel__container">
+
+                <div class="swiper">
+                    <div class="swiper-pagination"></div>
+
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                                alt="Livro sobre apache kafka e spring boot da alura books"></div>
+                        <div class="swiper-slide"><img src="assets/Liderança.svg"
+                                alt="Livro sobre liderança da alura books"></div>
+                        <div class="swiper-slide"><img src="assets/Javascript.svg"
+                                alt="Livro sobre javascript da alura books"></div>
+                        <div class="swiper-slide"><img src="assets/Portugol.svg"
+                                alt="Livro sobre portugol da alura books">
+                        </div>
+                        <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
+                                alt="Livro sobre Front-End da alura books"></div>
+                        <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
+                                alt="Livro sobre acessibilidade da alura books"></div>
+                        ...
                     </div>
-                    <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
-                            alt="Livro sobre Front-End da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
-                            alt="Livro sobre acessibilidade da alura books"></div>
-                    ...
+
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+
                 </div>
 
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
 
-            </div>
-        </section>
-
-        <div class="card">
-            <div class="card__descricao">
-                <div class="descricao">
-                    <h3 class="descricao__titulo"> Talvez voce tambem se interesse por... </h3>
-                    <h2 class="descricao__titulo__livro">Angular 11 e Firebase </h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
-                </div>
-                <img src="assets/angular.svg" alt="Angular" class="descricao__imagem"">
+                <div class="card">
+                    <div class="card__descricao">
+                        <div class="descricao">
+                            <h3 class="descricao__titulo"> Talvez voce tambem se interesse por... </h3>
+                            <h2 class="descricao__titulo__livro">Angular 11 e Firebase </h2>
+                            <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.
+                            </p>
+                        </div>
+                        <img src="assets/angular.svg" alt="Angular" class="descricao__imagem"">
                 </div>
 
                 <div class=" card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item" id="favorito__angular"><img src="assets/Vector.svg" alt=""></li>
-                    <li class="botoes__item"><img src="assets/Sacola.svg" alt=""></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais</a>
+                        <ul class="botoes">
+                            <li class="botoes__item" id="favorito__angular"><img src="assets/Vector.svg" alt=""></li>
+                            <li class="botoes__item"><img src="assets/Sacola.svg" alt=""></li>
+                        </ul>
+                        <a href="#" class="botoes__ancora">Saiba mais</a>
+                    </div>
+                </div>
             </div>
-
-        </div>
+        </section>
 
         <section class="carrossel carrossel__vendas">
             <h2 class="carrossel__titulo">Mais vendidos</h2>
-            <div class="swiper">
-                <div class="swiper-pagination"></div>
 
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
-                            alt="Livro sobre apache kafka e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Liderança.svg"
-                            alt="Livro sobre liderança da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Javascript.svg"
-                            alt="Livro sobre javascript da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Portugol.svg" alt="Livro sobre portugol da alura books">
+            <div class="carrossel__container">
+
+                <div class="swiper">
+                    <div class="swiper-pagination"></div>
+
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                                alt="Livro sobre apache kafka e spring boot da alura books"></div>
+                        <div class="swiper-slide"><img src="assets/Liderança.svg"
+                                alt="Livro sobre liderança da alura books"></div>
+                        <div class="swiper-slide"><img src="assets/Javascript.svg"
+                                alt="Livro sobre javascript da alura books"></div>
+                        <div class="swiper-slide"><img src="assets/Portugol.svg"
+                                alt="Livro sobre portugol da alura books">
+                        </div>
+                        <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
+                                alt="Livro sobre Front-End da alura books"></div>
+                        <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
+                                alt="Livro sobre acessibilidade da alura books"></div>
+                        ...
                     </div>
-                    <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
-                            alt="Livro sobre Front-End da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
-                            alt="Livro sobre acessibilidade da alura books"></div>
-                    ...
+
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+
                 </div>
+                    <div class="card">
+                        <div class="card__descricao">
+                            <div class="descricao">
+                                <div class="estrelas">
+                                    <img src="assets/star.svg" alt="">
+                                    <img src="assets/star.svg" alt="">
+                                    <img src="assets/star.svg" alt="">
+                                    <img src="assets/star.svg" alt="">
+                                    <img src="assets/star.svg" alt="">
+                                </div>
+                                <h3 class="descricao__titulo">Autora do mes</h3>
+                                <h2 class="descricao__titulo__livro">Juliana Agarikov</h2>
+                                <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
+                                    Front-End.
+                                </p>
+                            </div>
+                            <img src="assets/Perfil-escritora 1.svg" alt="Escritora">
+                        </div>
 
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                        <div class=" card__botoes">
+                            <ul class="botoes">
+                                <li class="botoes__item" id="favorito__angular"><img src="assets/Vector.svg" alt="">
+                                </li>
+                                <li class="botoes__item"><img src="assets/Sacola.svg" alt=""></li>
+                            </ul>
+                            <a href="#" class="botoes__ancora">Saiba mais</a>
+                        </div>
 
-            </div>
+                    </div>
+                </div>
 
         </section>
-
-        <div class="card">
-            <div class="card__descricao">
-                <div class="descricao">
-                    <div class="estrelas">
-                            <img src="assets/star.svg" alt="">
-                            <img src="assets/star.svg" alt="">
-                            <img src="assets/star.svg" alt="">
-                            <img src="assets/star.svg" alt="">
-                            <img src="assets/star.svg" alt="">
-                    </div>
-                    <h3 class="descricao__titulo">Autora do mes</h3>
-                    <h2 class="descricao__titulo__livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
-                </div>
-               <img src="assets/Perfil-escritora 1.svg" alt="Escritora">
-                </div>
-
-                <div class=" card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item" id="favorito__angular"><img src="assets/Vector.svg" alt=""></li>
-                    <li class="botoes__item"><img src="assets/Sacola.svg" alt=""></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais</a>
-            </div>
-
-        </div>
-
         <section class="topicos">
             <h2 class="topicos__titulo"> Tópicos visitados recentemente</h2>
             <ul class="topicos__lista">
